# WinterisComing

./: CMakeLists.txt  Common.h  ConditionParser.h  DatabaseManager.h  Parser.h  README.md  main.cpp  test.txt
StorageManager/: Block.h  Config.h  Disk.h  Field.h  MainMemory.h  Relation.h  Schema.h  SchemaManager.h  StorageManager.cpp  Tuple.h
